--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-node_modules/
+# Dependencies
+node_modules
+
+# Environment variables
 .env
+
+# Build output
+dist
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
