--- a/package.json
+++ b/package.json
@@ -8,29 +8,39 @@
         ]
     },
     "scripts": {
-        "run": "ts-node src/index.ts",
-        "start": "ts-node src/index.ts"
+        "build": "tsc",
+        "start": "ts-node src/attest.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.3.0",
         "@types/mapbox-gl": "^3",
-        "@types/node": "^22.14.1",
         "@types/react": "latest",
         "@types/react-copy-to-clipboard": "^5.0.7",
         "@types/react-dom": "latest",
         "commitlint": "^19.3.0",
         "cross-env": "^7.0.3",
         "husky": "^9.1.6",
-        "lint-staged": "latest",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.8.3"
+        "lint-staged": "latest"
     },
+    "keywords": [
+        "eas",
+        "attestation",
+        "ethereum",
+        "typescript"
+    ],
+    "author": "",
+    "license": "ISC",
     "dependencies": {
-        "@ethereum-attestation-service/eas-sdk": "1.6.1",
+        "@ethereum-attestation-service/eas-sdk": "^2.7.0",
         "dotenv": "^16.5.0"
     },
     "resolutions": {
         "ethers": "^6.13.2"
     },
-    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    "devDependencies": {
+        "@types/node": "^20.12.12",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5"
+    }
 }
