--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
+        "@types/node": "^20.12.12",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5",
         "@commitlint/cli": "^19.3.0",
-        "@types/mapbox-gl": "^3",
         "@types/react": "latest",
         "@types/react-copy-to-clipboard": "^5.0.7",
         "@types/react-dom": "latest",
@@ -37,10 +39,5 @@
     },
     "resolutions": {
         "ethers": "^6.13.2"
-    },
-    "devDependencies": {
-        "@types/node": "^20.12.12",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.4.5"
     }
 }
