--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
-    "name": "se-2",
-    "version": "0.0.1",
-    "private": true,
-    "workspaces": {
-        "packages": [
-            "src/*"
-        ]
-    },
+    "name": "eas-attestation-tutorial",
+    "version": "1.0.0",
+    "description": "TypeScript project for EAS attestation tutorial",
+    "main": "dist/attest.js",
     "scripts": {
         "build": "tsc",
         "start": "ts-node src/attest.ts",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "devDependencies": {
-        "@types/node": "^20.12.12",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.4.5",
-        "@commitlint/cli": "^19.3.0",
-        "@types/react": "latest",
-        "@types/react-copy-to-clipboard": "^5.0.7",
-        "@types/react-dom": "latest",
-        "commitlint": "^19.3.0",
-        "cross-env": "^7.0.3",
-        "husky": "^9.1.6",
-        "lint-staged": "latest"
+        "example:onchain": "ts-node src/examples/attest.ts",
+        "example:offchain": "ts-node src/examples/create-offchain-attestation.ts",
+        "example:fetch": "ts-node src/examples/get-attestation.ts",
+        "example:revoke": "ts-node src/examples/revoke-attestation.ts",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "example:register-schema": "ts-node src/examples/register-schema.ts",
+        "example:fetch-schema": "ts-node src/examples/get-schema.ts"
     },
     "keywords": [
         "eas",
@@ -35,9 +24,12 @@
     "license": "ISC",
     "dependencies": {
         "@ethereum-attestation-service/eas-sdk": "^2.7.0",
-        "dotenv": "^16.5.0"
+        "dotenv": "^16.4.5",
+        "ethers": "^6"
     },
-    "resolutions": {
-        "ethers": "^6.13.2"
+    "devDependencies": {
+        "@types/node": "^20.12.12",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.4.5"
     }
 }
