--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "license": "ISC",
     "dependencies": {
         "@ethereum-attestation-service/eas-sdk": "^2.7.0",
+        "@types/js-yaml": "^4.0.9",
         "dotenv": "^16.4.5",
         "ethers": "^6",
         "geoip-lite": "^1.4.10",
+        "js-yaml": "^4.1.0",
         "public-ip": "^7.0.1"
     },
     "devDependencies": {
