--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "example:load-offchain": "ts-node src/examples/load-offchain-attestations.ts",
         "example:chained-attestation": "ts-node src/examples/chained-attestation.ts",
         "example:prepare-private-data": "ts-node src/examples/prepare-private-data.ts",
+        "example:list-items": "ts-node src/examples/list-items.ts",
         "workflow:impact-monitoring": "ts-node src/workflows/workflow-impact-monitoring.ts",
         "workflow:event-checkin": "ts-node src/workflows/workflow-event-checkin.ts",
         "workflow:geocache": "ts-node src/workflows/workflow-geocaching.ts"
