--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "example:load-offchain": "ts-node src/examples/load-offchain-attestations.ts",
         "workflow:impact-monitoring": "ts-node src/workflows/workflow-impact-monitoring.ts",
         "workflow:event-checkin": "ts-node src/workflows/workflow-event-checkin.ts",
-        "workflow:geocache": "ts-node src/workflows/workflow-geocaching.ts"
+        "workflow:geocache": "ts-node src/workflows/workflow-geocaching.ts",
+        "workflow:proofmode": "ts-node src/workflows/workflow-proofmode.ts"
     },
     "keywords": [
         "eas",
@@ -29,6 +30,8 @@
     "license": "ISC",
     "dependencies": {
         "@ethereum-attestation-service/eas-sdk": "^2.7.0",
+        "@types/crypto-js": "^4.2.2",
+        "crypto-js": "^4.2.0",
         "dotenv": "^16.4.5",
         "ethers": "^6",
         "geoip-lite": "^1.4.10",
@@ -39,5 +42,6 @@
         "@types/node": "^20.12.12",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
