--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
         "build": "tsc",
         "start": "ts-node src/attest.ts",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "example:onchain": "ts-node src/examples/create-onchain-attestation.ts",
-        "example:offchain": "ts-node src/examples/create-offchain-attestation.ts",
-        "example:fetch": "ts-node src/examples/get-attestation.ts",
+        "example:attest-onchain": "ts-node src/examples/create-onchain-attestation.ts",
+        "example:attest-offchain": "ts-node src/examples/create-offchain-attestation.ts",
+        "example:fetch-attestation": "ts-node src/examples/get-attestation.ts",
         "example:revoke": "ts-node src/examples/revoke-attestation.ts",
         "example:register-schema": "ts-node src/examples/register-schema.ts",
         "example:fetch-schema": "ts-node src/examples/fetch-schema.ts",
         "example:save-offchain": "ts-node src/examples/save-offchain-attestation.ts",
         "example:load-offchain": "ts-node src/examples/load-offchain-attestations.ts",
         "example:chained-attestation": "ts-node src/examples/chained-attestation.ts",
-        "example:prepare-private-data": "ts-node src/examples/prepare-private-data.ts",
+        "example:create-private-data-object": "ts-node src/examples/prepare-private-data.ts",
         "example:generate-private-data-proofs": "ts-node src/examples/private-data-proofs.ts",
         "example:generate-onchain-private-data-proofs": "ts-node src/examples/private-data-proofs-onchain.ts",
         "example:gas-cost-comparison": "ts-node src/examples/gas-comparison.ts",
