--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
         "geoip-lite": "^1.4.10",
         "jimp": "^1.6.0",
         "jsqr": "^1.4.0",
-        "public-ip": "^7.0.1"
+        "public-ip": "^7.0.1",
+        "@types/js-yaml": "^4.0.9",
+        "js-yaml": "^4.1.0"
     },
     "devDependencies": {
         "@types/geoip-lite": "^1.4.4",
