Moved extra example into `extras.md` + added new section to run workflow

--- a/config/examples.yaml
+++ b/config/examples.yaml
@@ -49,7 +49,7 @@ register-schema:
   #     location: "New York"
   #     timestamp: 1633072800
   #     notes: "This is a private note."
-  - schemaString: "uint256 eventId, uint8 voteIndex"
+  - schemaString: "string srs, string locationType, string location, uint8 specVersion"
     revocable: true
 
 fetch-schema:
@@ -191,7 +191,7 @@ generate-onchain-private-data-proofs:
   #   fieldsToDisclose: ["location", "timestamp"]
 
 gas-cost-comparison:
-  # Below are two example geosjon objects to be used for gas comparison.
+  # See `extras.md` for an alternative option to test.
   - fields:
       coordinates: |
         {
@@ -236,442 +236,18 @@ gas-cost-comparison:
               }
             ]
         }
-      # coordinates: |
-      #   {
-      #     "type": "FeatureCollection",
-      #     "features": [
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.10235994953466,
-      #                 42.35626574424418
-      #               ],
-      #               [
-      #                 -71.10192431066274,
-      #                 42.35576428373412
-      #               ],
-      #               [
-      #                 -71.10080170279953,
-      #                 42.35631527099068
-      #               ],
-      #               [
-      #                 -71.10126247468384,
-      #                 42.35683529947602
-      #               ],
-      #               [
-      #                 -71.10235994953466,
-      #                 42.35626574424418
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.10044775080074,
-      #                 42.357227018598934
-      #               ],
-      #               [
-      #                 -71.10106956844271,
-      #                 42.35688889692781
-      #               ],
-      #               [
-      #                 -71.10090238162381,
-      #                 42.35671983541002
-      #               ],
-      #               [
-      #                 -71.10077332513195,
-      #                 42.356635304481074
-      #               ],
-      #               [
-      #                 -71.10056214178199,
-      #                 42.35658545285372
-      #               ],
-      #               [
-      #                 -71.10045068390338,
-      #                 42.356576783001316
-      #               ],
-      #               [
-      #                 -71.10033629292211,
-      #                 42.356576783001316
-      #               ],
-      #               [
-      #                 -71.1001280426741,
-      #                 42.35663096955818
-      #               ],
-      #               [
-      #                 -71.09995498965124,
-      #                 42.3567285052427
-      #               ],
-      #               [
-      #                 -71.10034215912607,
-      #                 42.35720534418766
-      #               ],
-      #               [
-      #                 -71.10036562394257,
-      #                 42.357227018598934
-      #               ],
-      #               [
-      #                 -71.10040668737165,
-      #                 42.357237855802026
-      #               ],
-      #               [
-      #                 -71.10044775080074,
-      #                 42.357227018598934
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.09867170538043,
-      #                 42.357863230981536
-      #               ],
-      #               [
-      #                 -71.09869517019693,
-      #                 42.35774402283275
-      #               ],
-      #               [
-      #                 -71.09865703986986,
-      #                 42.35764648872444
-      #               ],
-      #               [
-      #                 -71.09860717713484,
-      #                 42.35758363332974
-      #               ],
-      #               [
-      #                 -71.09851038476612,
-      #                 42.35750777328738
-      #               ],
-      #               [
-      #                 -71.09836666276374,
-      #                 42.35747526181265
-      #               ],
-      #               [
-      #                 -71.09825227178246,
-      #                 42.357462257217975
-      #               ],
-      #               [
-      #                 -71.09698517168329,
-      #                 42.35787623549325
-      #               ],
-      #               [
-      #                 -71.09691477723305,
-      #                 42.35793258834602
-      #               ],
-      #               [
-      #                 -71.09684438278288,
-      #                 42.358077805079716
-      #               ],
-      #               [
-      #                 -71.09683265037492,
-      #                 42.358175338518606
-      #               ],
-      #               [
-      #                 -71.09688544621258,
-      #                 42.35826420218649
-      #               ],
-      #               [
-      #                 -71.09700863649982,
-      #                 42.358361735336075
-      #               ],
-      #               [
-      #                 -71.09712009437908,
-      #                 42.3584029159538
-      #               ],
-      #               [
-      #                 -71.09722861915573,
-      #                 42.358424589951994
-      #               ],
-      #               [
-      #                 -71.09736060874953,
-      #                 42.3584029159538
-      #               ],
-      #               [
-      #                 -71.09856024750114,
-      #                 42.35799544339119
-      #               ],
-      #               [
-      #                 -71.09863357505333,
-      #                 42.357919583845984
-      #               ],
-      #               [
-      #                 -71.09867170538043,
-      #                 42.357863230981536
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.09750194910806,
-      #                 42.357503902659545
-      #               ],
-      #               [
-      #                 -71.09720863889994,
-      #                 42.35699888915394
-      #               ],
-      #               [
-      #                 -71.0959914015358,
-      #                 42.35740853561302
-      #               ],
-      #               [
-      #                 -71.09632284207098,
-      #                 42.35791137840894
-      #               ],
-      #               [
-      #                 -71.09750194910806,
-      #                 42.357503902659545
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.09599692875047,
-      #                 42.35726562409755
-      #               ],
-      #               [
-      #                 -71.09589720327976,
-      #                 42.35706838679832
-      #               ],
-      #               [
-      #                 -71.09577401299191,
-      #                 42.35710089848399
-      #               ],
-      #               [
-      #                 -71.09590306948377,
-      #                 42.35729163336558
-      #               ],
-      #               [
-      #                 -71.09599692875047,
-      #                 42.35726562409755
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.09616411556941,
-      #                 42.35720276832237
-      #               ],
-      #               [
-      #                 -71.09605852389409,
-      #                 42.35701853551507
-      #               ],
-      #               [
-      #                 -71.09594119981082,
-      #                 42.35704887977923
-      #               ],
-      #               [
-      #                 -71.09606732320067,
-      #                 42.35725045201963
-      #               ],
-      #               [
-      #                 -71.09616411556941,
-      #                 42.35720276832237
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.09632836928569,
-      #                 42.35714858225856
-      #               ],
-      #               [
-      #                 -71.09621984450835,
-      #                 42.35696001439268
-      #               ],
-      #               [
-      #                 -71.09609958732314,
-      #                 42.35698819123624
-      #               ],
-      #               [
-      #                 -71.09622277761102,
-      #                 42.357181093902255
-      #               ],
-      #               [
-      #                 -71.09632836928569,
-      #                 42.35714858225856
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.09648675679796,
-      #                 42.35709439614803
-      #               ],
-      #               [
-      #                 -71.09639289753123,
-      #                 42.35690582811955
-      #               ],
-      #               [
-      #                 -71.09626677414208,
-      #                 42.35694267479002
-      #               ],
-      #               [
-      #                 -71.09639289753123,
-      #                 42.35712907526434
-      #               ],
-      #               [
-      #                 -71.09648675679796,
-      #                 42.35709439614803
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.09665394361687,
-      #                 42.357046712332334
-      #               ],
-      #               [
-      #                 -71.09655421814621,
-      #                 42.356849474346035
-      #               ],
-      #               [
-      #                 -71.09643102785834,
-      #                 42.35688198614449
-      #               ],
-      #               [
-      #                 -71.09655128504426,
-      #                 42.357072721691
-      #               ],
-      #               [
-      #                 -71.09665394361687,
-      #                 42.357046712332334
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.0968152642312,
-      #                 42.356983856337735
-      #               ],
-      #               [
-      #                 -71.09670673945458,
-      #                 42.356795287977604
-      #               ],
-      #               [
-      #                 -71.09658941537133,
-      #                 42.35682563234957
-      #               ],
-      #               [
-      #                 -71.0967155387605,
-      #                 42.35701853551507
-      #               ],
-      #               [
-      #                 -71.0968152642312,
-      #                 42.356983856337735
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       },
-      #       {
-      #         "type": "Feature",
-      #         "properties": {},
-      #         "geometry": {
-      #           "coordinates": [
-      #             [
-      #               [
-      #                 -71.09965140998939,
-      #                 42.356426223721655
-      #               ],
-      #               [
-      #                 -71.09940943773636,
-      #                 42.35603435190711
-      #               ],
-      #               [
-      #                 -71.09820393277015,
-      #                 42.356454310573724
-      #               ],
-      #               [
-      #                 -71.0984503133452,
-      #                 42.35684228604572
-      #               ],
-      #               [
-      #                 -71.09965140998939,
-      #                 42.356426223721655
-      #               ]
-      #             ]
-      #           ],
-      #           "type": "Polygon"
-      #         }
-      #       }
-      #     ]
-      #   }
 
+event-checkin-workflow:
+  - schemaUid: "PLACEHOLDER_SCHEMA_UID_EVENT_CHECKIN" # Replace with your actual Schema UID
+    schemaString: "PLACEHOLDER_SCHEMA_STRING_EVENT_CHECKIN" # Replace with your actual schema string, e.g., "string eventId, string ticketId, uint64 timestamp, string geoJson"
+    fields:
+      eventId: "your-event-id-here" # Replace with the actual event ID
+      # ticketId: "your-ticket-id-here" # Optional: if not provided, a random one will be generated by the script
+    recipient: "0x0000000000000000000000000000000000000000" # Optional: Defaults to the zero address or can be your specific recipient
+    revocable: true # Optional: Defaults to true
+    expirationTime: 0 # Optional: Defaults to 0 (no expiration). Use Unix timestamp for expiration.
+    resolverAddress: "0x0000000000000000000000000000000000000000" # Optional: Defaults to the zero address (EAS default resolver)
+    # referenceUid: "0x..." # Optional: UID of a referenced attestation, defaults to ethers.ZeroHash
 # Add other example script configurations here, keyed by script name (without .ts)
 # e.g.:
 # register-schema:
