--- a/config/examples.yaml
+++ b/config/examples.yaml
@@ -245,21 +245,21 @@ event-checkin-workflow:
       specVersion: 1
       eventId: "Community Center Concert" # Replace with the actual event ID
 
-event-checkin-workflow2:
-  attestations:
-    - schemaString: "string eventId, string ticketId, uint64 timestamp"
-      # Fields that are are missing below are created in the script.
-      fields:
-        eventId: "Community Center Concert" # Replace with the actual event ID
-        timestamp: 0
-      revocable: true
-    - schemaString: "string srs, string locationType, string location, uint8 specVersion, string eventId" # Replace with your actual schema string, e.g., "string eventId, string ticketId, uint64 timestamp, string geoJson"
-      fields:
-        srs: "EPSG:4326"
-        locationType: "geoJson"
-        specVersion: 1
-        eventId: "Community Center Concert" # Replace with the actual event ID
-      revocable: true
+event-checkin-workflow-alternate:
+  - attestations:
+      - schemaString: "string eventId, string ticketId, uint64 timestamp"
+        # Fields that are are missing below are created in the script.
+        fields:
+          eventId: "Community Center Concert" # Replace with the actual event ID
+          timestamp: 1747184331 # Timestamp of the event
+        revocable: true
+      - schemaString: "string srs, string locationType, string location, uint8 specVersion, string eventId" # Replace with your actual schema string, e.g., "string eventId, string ticketId, uint64 timestamp, string geoJson"
+        fields:
+          srs: "EPSG:4326"
+          locationType: "geoJson"
+          specVersion: 1
+          eventId: "Community Center Concert" # Replace with the actual event ID
+        revocable: true
 # Add other example script configurations here, keyed by script name (without .ts)
 # e.g.:
 # register-schema:
