--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "example:list-items": "ts-node src/examples/list-items.ts",
         "workflow:impact-monitoring": "ts-node src/workflows/workflow-impact-monitoring.ts",
         "workflow:event-checkin": "ts-node src/workflows/workflow-event-checkin.ts",
+        "workflow:event-checkin-alternate": "ts-node src/workflows/workflow-event-checkin-alternate.ts",
         "workflow:geocache": "ts-node src/workflows/workflow-geocaching.ts",
         "workflow:proofmode": "ts-node src/workflows/workflow-proofmode.ts",
         "workflow:qr": "ts-node src/workflows/workflow-qr.ts"
