--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "eas-attestation-tutorial",
+    "workspaces": [
+        "qr-poc"
+    ],
     "version": "1.0.0",
     "description": "TypeScript project for EAS attestation tutorial",
     "main": "dist/attest.js",
     "scripts": {
-        "build": "tsc",
-        "start": "ts-node src/attest.ts",
         "test": "echo \"Error: no test specified\" && exit 1",
         "example:attest-onchain": "ts-node src/examples/create-onchain-attestation.ts",
         "example:attest-offchain": "ts-node src/examples/create-offchain-attestation.ts",
@@ -53,6 +54,5 @@
         "@types/node": "^20.12.12",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
-    },
-    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    }
 }
