--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "eas-attestation-tutorial",
+    "private": true,
     "workspaces": [
         "qr-poc"
     ],
@@ -54,5 +55,6 @@
         "@types/node": "^20.12.12",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
