--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "workflow:proofmode": "ts-node src/workflows/workflow-proofmode.ts",
         "workflow:qr": "ts-node src/workflows/workflow-qr.ts",
         "dev:qr-poc": "yarn workspace qr-poc dev",
+        "build:qr-poc": "yarn workspace qr-poc build",
         "dev:validator": "yarn workspace validator dev"
     },
     "keywords": [
